[gd_scene load_steps=2 format=3 uid="uid://d3u6g8p68o0bb"]

[ext_resource type="Script" path="res://scenes/gui/tire_info_app.gd" id="1"]

[node name="TireInfoApp" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 50.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0.556863)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TireFL" type="VBoxContainer" parent="Panel"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0

[node name="TireWear" type="Label" parent="Panel/TireFL"]
layout_mode = 2
text = "0.0"
horizontal_alignment = 1

[node name="TemperatureColor" type="ColorRect" parent="Panel/TireFL"]
custom_minimum_size = Vector2(60, 80)
layout_mode = 2
color = Color(0, 0, 1, 1)

[node name="TemperatureLabel" type="Label" parent="Panel/TireFL/TemperatureColor"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -13.0
offset_right = 20.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "20.0c"

[node name="TireFR" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="TireWear" type="Label" parent="Panel/TireFR"]
layout_mode = 2
text = "0.0"
horizontal_alignment = 1

[node name="TemperatureColor" type="ColorRect" parent="Panel/TireFR"]
custom_minimum_size = Vector2(60, 80)
layout_mode = 2
color = Color(0, 0, 1, 1)

[node name="TemperatureLabel" type="Label" parent="Panel/TireFR/TemperatureColor"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -13.0
offset_right = 20.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "20.0c"

[node name="TireBL" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="TemperatureColor" type="ColorRect" parent="Panel/TireBL"]
custom_minimum_size = Vector2(60, 80)
layout_mode = 2
color = Color(0, 0, 1, 1)

[node name="TemperatureLabel" type="Label" parent="Panel/TireBL/TemperatureColor"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -13.0
offset_right = 20.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "20.0c"

[node name="TireWear" type="Label" parent="Panel/TireBL"]
layout_mode = 2
text = "0.0"
horizontal_alignment = 1

[node name="TireBR" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="TemperatureColor" type="ColorRect" parent="Panel/TireBR"]
custom_minimum_size = Vector2(60, 80)
layout_mode = 2
color = Color(0, 0, 1, 1)

[node name="TemperatureLabel" type="Label" parent="Panel/TireBR/TemperatureColor"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -13.0
offset_right = 20.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "20.0c"

[node name="TireWear" type="Label" parent="Panel/TireBR"]
layout_mode = 2
text = "0.0"
horizontal_alignment = 1
